adding ajax call

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<!--       EXTERNAL LINKS       -->
 		<!-- jQuery library-->
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   		 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<!-- bootstrap link-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<!-- local CSS style sheet -->
@@ -19,6 +19,20 @@
 	<div class="container">
 		<!-- buttons will get put here -->
 		<div id="button-view"></div>
+		
+		<!-- form for user input to add topic -->
+		<form id="topics-form">
+			<label for="add-topics">Add an animal</label>
+			<input type="text" id="topics-input">
+				<br>
+
+			<!-- submit button adds new topic -->
+			<input type="submit" id="submit-topics" value="Add">
+		</form>
+
+		<div id="gif-view"></div>
+
+
 
 
 
