adding button formatting, initial boostrap layout

--- a/index.html
+++ b/index.html
@@ -16,25 +16,43 @@
 </head>
 <body>
 
-			<!-- buttons will get put here -->
-			<div id="button-view"></div>
+	<div class="container">
+
+		<div class="row">
+			<div class="col-md-4">
+					<!-- form for user input to add topic -->
+				<form id="topics-form">
+					<label for="add-topics">Add an animal</label>
+					<input type="text" id="topics-input">
+						<br>
+					<!-- submit button adds new topic -->
+					<input type="submit" id="submit-topics" value="Add">
+				</form>
+			</div>
+		
+
+			<div class="col-md-8">
+				<!-- buttons will get put here -->
+				<div id="button-view"></div>
+			</div>
+
+		</div>
+		
+		
+
 		
 
 
-				<!-- form for user input to add topic -->
-			<form id="topics-form">
-				<label for="add-topics">Add an animal</label>
-				<input type="text" id="topics-input">
-					<br>
-				<!-- submit button adds new topic -->
-				<input type="submit" id="submit-topics" value="Add">
-			</form>
+
 		
 
 
-
-			<div id="gif-view"></div>
-
+		<div class="row">
+			<div class="col-md-2">
+			<div id="gif-view" class="col-md-8"></div>
+			<div class="col-md-2">
+		<div>
+	</div> <!--closing out container -->
 
 
 
